# variational-c-uniform-release

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
benchmarks/social/medium/: config.yaml
benchmarks/social/medium/data/: circular_100.pkl  parallel_100.pkl  random_100.pkl
configs/: controllers.yaml  svgd.yaml
configs/dynamics/: default_dynamics.yaml
configs/fm/horizon_16/: bicycle.yaml  bicycle_steer.yaml  unicycle.yaml  unicycle_steer.yaml
configs/fm/horizon_26/: bicycle.yaml  bicycle_steer.yaml  unicycle.yaml  unicycle_steer.yaml
configs/gd/horizon_16/: bicycle.yaml  bicycle_steer.yaml  unicycle.yaml  unicycle_steer.yaml
configs/gd/horizon_26/: bicycle_steer.yaml  unicycle.yaml  unicycle_steer.yaml
deploy_checkpoints/fm/horizon_16/fm__bicycle__16/: model.pth  stats.json
mppi_plus_proto/config/: omega_setup.py
mppi_plus_proto/dynamics_models/: models.py  rollout.py  utils.py
mppi_plus_proto/eval/: controllers.py  env.py  traj_helpers.py
mppi_plus_proto/mppi/: controllers.py  mppi_dynamics_models.py  mppi_presamplers.py  sudden_circles_world.py
mppi_plus_proto/nn_models/: generative.py  layers.py  utils.py
mppi_plus_proto/plotting/: plots.py
mppi_plus_proto/samplers/: gd.py
mppi_plus_proto/trainers/: data_samplers.py  datasets.py  mutual_inf.py  state_tracker.py
mppi_plus_proto/util/: parallel_util.py  plot.py  random_util.py  str_util.py
notebooks/: pms_benchmark_analysis.ipynb  train_mi.ipynb
scripts/eval/: make_sampling_plots.py  pms_benchmark.py
scripts/svgd/: sample_dataset.py  train_fm.py
(+5277 files in other folders)
